[package]
name = "xrpl_neon"
description = "Maps the functions from xrpl_parser into JavaScript."
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrpl_parser = { path = "../xrpl_parser" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
